# online_chat

./: .env.template  .gitignore  CMakeLists.txt  README.md  TESTING.md  db_test
include/: auth.h  chat.h  database.h  utils.h
src/: auth.cpp  chat.cpp  database.cpp  main.cpp  utils.cpp
static/: index.html  login.html  script.js
test/: test_auth.cpp  test_dtabase.cpp
tests/: auth_test.cpp  database_test.cpp
